partial bug fix

--- a/app/views/orderitems/index.html.erb
+++ b/app/views/orderitems/index.html.erb
@@ -6,7 +6,7 @@
     <div>
       <p><%= i.item.category.item_type %></p>
       <p>Brand: <%= i.item.brand %></p>
-      <p>Price: $<%= i.item.price / 100 %>.00</p>
+      <p>Price:<%= i.item.price / 100 %></p>
       <p>Size: <%= i.item.size %></p>
       <p>quantity: <%= i.quantity %></p>
       <%= form_tag edit_orderitem_path(i), method: :patch do |j| %>
@@ -25,7 +25,7 @@
       <div>
         <p><%= item.category.item_type %></p>
         <p>Brand: <%= item.brand %></p>
-        <p>Price: $<%= item.price / 100 %>.00</p>
+        <p>Price:<%= item.price / 100 %></p>
         <p>Size: <%= item.size %></p>
         <p>quantity: <%= i["quantity"] %></p>
         <%= form_tag edit_orderitem_path(item), method: :patch do |j| %>
