--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -40,7 +40,7 @@
                           WAITING
                         </p>
                       <% end %>
-                        <p class="package-item-price">$<%= i.price / 100 %></p>
+                        <p class="package-item-price">$<%= i.price %></p>
                     </div>
                   </div>
               <% end %>
