--- a/app/views/items/_package_show.html.erb
+++ b/app/views/items/_package_show.html.erb
@@ -12,7 +12,7 @@
           <h1><%= @item.brand.upcase %></h1>
         </div>
         <div class="package-item-sub-header">
-          <h3><%= humanized_money_with_symbol(@item.price / 100) %></h3>
+          <h3><%= humanized_money_with_symbol(item.price) %></h3>
         </div>
         <div class="package-item-sizes">
           <% if !@in_cart %>
