--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -30,3 +30,14 @@
     </div>
   <% end %>
 </div>
+
+<style type="text/css">
+.card-picture {
+    display: none;
+}
+
+.card:hover .card-picture {
+    display: block;
+  }
+
+ </style>
