--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,3 +1,54 @@
+.my-nav-button {
+  display: flex;
+  align-items: center;
+  p {
+    margin: 0;
+  }
+  .fa {
+    margin-left: 0;
+    margin-right: 10px;
+  }
+  margin: 0 10px;
+}
+
+.my-log-out {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  color: black;
+  .fa {
+    margin-left: 0;
+    margin-right: 10px;
+  }
+  p {
+    margin: 0;
+  }
+  &:hover {
+    text-decoration: none;
+    color: grey;
+  }
+}
+
+
+.dropdown-menu {
+  li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .fa {
+      margin-right: 10px;
+    }
+  }
+  .dropdown-logout {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .fa {
+      margin-right: 10px;
+    }
+  }
+}
+
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
@@ -42,7 +93,6 @@
   flex: 0 1 auto;
   cursor: pointer;
   padding: 0 20px;
-  color:white;
 }
 
 /* Navbar standard link */
@@ -135,8 +185,4 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
-}
-
-.fa-shopping-cart {
-  margin-left: 15px;
 }
