--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,9 +16,27 @@
       <%= f.input :new_package, as: :hidden, value: "true" %>
       <%= f.submit "Submit", class: "btn base-button" %>
   <% end %>
-
-
-
-  <!-- </div> -->
 </div>
 
+<style>
+  .my-log-out {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    color: white;
+    .fa {
+      margin-left: 0;
+      margin-right: 10px;
+    }
+    p {
+      margin: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: grey;
+    }
+  }
+  .dropdown-toggle {
+    color: white;
+  }
+</style>
