--- a/app/assets/stylesheets/layout/_main_package_page.scss
+++ b/app/assets/stylesheets/layout/_main_package_page.scss
@@ -1,12 +1,16 @@
 #package-main-index {
-  margin-top: 10px;
+  //margin-top: 10px;
+  // width: 80%;
+  padding-right: 320px;
+  background: #F8F9F9;
+  margin-top: 70px;
 }
 
-.main-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+// .main-container {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+// }
 
 .package-cards-container {
   width: 80%;
