--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -14,6 +14,11 @@
   background-color: $cart-button;
   border-radius: 7px;
   color: white;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+
   &:hover{
     background-color: $cart-button-hover;
     color:white;
