--- a/app/views/pages/package_main.js.erb
+++ b/app/views/pages/package_main.js.erb
@@ -5,6 +5,7 @@
 var added = "<%= @category %>"
 <% if @in_cart %>
   $("#sidebar-" + category + " > .package-item-right > .package-item-in-cart-status").addClass("package-item-in-cart");
+  $("#sidebar-" + category).removeClass("not-booked");
 <% end %>
 <% if @ready_to_order_package %>
   $(".place-package-order").attr("href", "/orderitems");
