--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,16 +3,18 @@
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
 <!-- <div class="logo"> -->
   <%= image_tag "logo_complet_2.png" %>
+  <%#= image_tag "logo_zebrasclub_2.svg" %>
+
   <%#= image_tag "https://unsplash.it/50" %>
 <!-- </div> -->
   <% end %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-    <div><%#= link_to "Package", "/package" %></div>
+    <div><%= link_to " Package", "/package", class:"btn navbar-button fa fa-cube" %></div>
 
-      <%= link_to "Buy Individual Items", items_path, class: "btn base-button" %>
-      <div><%= link_to "", orderitems_path, class: "btn base-button fa fa-shopping-cart"%></div>
+      <%= link_to " Shop", items_path, class: "btn navbar-button fa fa-navicon" %>
+      <div><%= link_to " Cart", orderitems_path, class: "btn navbar-button fa fa-shopping-cart"%></div>
 
     <!-- Different navigation if login or not -->
     <% if user_signed_in? %>
