--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -89,6 +89,7 @@
 }
 .card-row{
   padding: 90px;
+  padding-top: 20px;
   // background-color: rgb(245, 245, 245);
   // box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   // height: 85vh;
