--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,25 +12,19 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    
+
     <% unless (current_user && current_user.orders.first.order_items.where(package: true).length.zero?) || (!current_user && session[:package_items].nil?) %>
-      <%= link_to package_path, class: "btn navbar-button" do %>
-        <i class="fa fa-cube"></i><p>My Package</p>
-      <% end %>
+      <%= link_to " My Package", package_path, class: "btn navbar-button fa fa-cube" %>
     <% end %>
-    <%= link_to orderitems_path, class: "btn navbar-button" do %>
-      <i class="fa fa-shopping-cart"></i><p>My Cart</p>
-    <% end %>
-    
+    <%= link_to " My Cart", orderitems_path, class: "btn navbar-button fa fa-shopping-cart" %>
+
     <% if user_signed_in? %>
-      <div class="navbar-wagon-item">
-        <%= link_to destroy_user_session_path, method: :delete, class: "my-log-out" do %>
-          <i class="fa fa-sign-out"></i><p>Sign Out</p>
-        <% end %>
+      <div>
+        <%= link_to " Sign Out", destroy_user_session_path, method: :delete, class: "btn navbar-button fa fa-sign-out" %>
       </div>
     <% else %>
-      <%= link_to "Login", new_user_session_path, class: "my-log-out navbar-wagon-item" %>
-      <%= link_to "Sign Up", new_user_registration_path, class: "my-log-out navbar-wagon-item" %>
+      <%= link_to "Login", new_user_session_path, class: "btn navbar-button navbar-wagon-item" %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "btn navbar-button navbar-wagon-item" %>
     <% end %>
   </div>
   <div class="navbar-wagon-item hidden-md hidden-lg">
