Added new colors and thats it

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -35,7 +35,7 @@
 
 .in-cart {
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  background-color: lightgreen;
+  background-color: $cart-button;
   color: black;
 }
 
