--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -27,7 +27,7 @@ $border-radius-small: 2px;
 //Base Button colors
 $base-button-color: #64D6FF;
 $base-button-color-hover: #48C3F0;
-$cart-button: #57FFD0;
+$cart-button: #57C1AD;
 $cart-button-hover: #48D2AD;
 
 $base-font: $our-font;
