--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -114,12 +114,12 @@
     margin: 0;
   }
   &:hover {
-    background-color: red;
+    background-color: $cart-button;
   }
 }
 
 .size-circle-on {
-  background-color: pink;
+  background-color: $cart-button;
   color: black !important;
 }
 
