new beatufil white text only inthe home navbar, and new logo with awesome sport font

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -4,8 +4,9 @@
 // Google fonts
 // @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
-
+@import url('https://fonts.googleapis.com/css?family=Graduate');
 $our-font: "Quicksand", "sans-serif";
+$logo-font: 'Graduate', "cursive";
 // $base-font: "Open Sans", "Helvetica", "sans-serif";
 // $header-font: "Raleway", "Helvetica", "sans-serif";
 
