--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,33 +1,63 @@
-.my-nav-button {
-  display: flex;
-  align-items: center;
-  p {
-    margin: 0;
-  }
-  .fa {
-    margin-left: 0;
-    margin-right: 10px;
-  }
-  margin: 0 10px;
+// .my-nav-button {
+//   display: flex;
+//   align-items: center;
+//   p {
+//     margin: 0;
+//   }
+//   .fa {
+//     margin-left: 0;
+//     margin-right: 10px;
+//   }
+//   margin: 0 10px;
+// }
+
+.nav-bg-transparent{
+  background: transparent;
+  color: white;
+}
+.nav-logo-font{
+  font-family: $logo-font;
+}
+.nav-bg-white{
+  color: #8A8888;
+  background-color: #F8F9F9;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
 }
 
-.my-log-out {
-  display: flex;
-  align-items: center;
-  font-weight: bold;
-  color: black;
-  .fa {
-    margin-left: 0;
-    margin-right: 10px;
-  }
-  p {
-    margin: 0;
-  }
-  &:hover {
-    text-decoration: none;
-    color: grey;
+.navbar-button{
+  padding: 10px;
+}
+
+.nav-btn-white a{
+  color: white;
+    &:hover{
+    color: #e2e2e2;
   }
 }
+.nav-btn-grey a{
+  color: #8A8888;
+  &:hover{
+    color: #e2e2e2;
+  }
+}
+
+// .my-log-out {
+//   display: flex;
+//   align-items: center;
+//   font-weight: bold;
+//   color: black;
+//   .fa {
+//     margin-left: 0;
+//     margin-right: 10px;
+//   }
+//   p {
+//     margin: 0;
+//   }
+//   &:hover {
+//     text-decoration: none;
+//     color: grey;
+//   }
+// }
 
 
 .dropdown-menu {
@@ -52,23 +82,16 @@
 /* Main class */
 .navbar-wagon {
   position: fixed;
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
   padding: 0px 30px;
   align-items: center;
   justify-content: space-between;
-  font-family: $base-font;
   top: 0px;
   left: 0px;
   right: 0px;
   z-index: 200;
-  background-color: #F8F9F9;
-}
-.navbar-button{
-  padding: 10px;
-  color: #8A8888;
 }
 // logo
 .logo{
@@ -107,65 +130,65 @@
 }
 
 /* Navbar standard link */
-.navbar-wagon-link {
-  color: $base-button-color;
-  font-size: 14px;
-}
-.navbar-wagon-link:hover {
-  color: $base-button-color;
-  text-decoration: none;
-}
+// .navbar-wagon-link {
+//   color: $base-button-color;
+//   font-size: 14px;
+// }
+// .navbar-wagon-link:hover {
+//   color: $base-button-color;
+//   text-decoration: none;
+// }
 
 /* Navbar right button */
-.navbar-wagon-button {
-  margin-left: 10px;
-  padding: 0 20px;
-  border-radius: 20em;
-  line-height: 40px;
-  background-color: #D23333;
-  color: white;
-  font-size: 14px;
-  border: 2px solid #D23333;
-}
-.navbar-wagon-button:hover {
-  color: white;
-  background: #D23333;
-  border-color: #ac2626;
-}
+// .navbar-wagon-button {
+//   margin-left: 10px;
+//   padding: 0 20px;
+//   border-radius: 20em;
+//   line-height: 40px;
+//   background-color: #D23333;
+//   color: white;
+//   font-size: 14px;
+//   border: 2px solid #D23333;
+// }
+// .navbar-wagon-button:hover {
+//   color: white;
+//   background: #D23333;
+//   border-color: #ac2626;
+// }
 
 /* Navbar search form */
-.navbar-wagon-search {
-  flex: 0 1 300px;
-  display: flex;
-  justify-content: flex-end;
-  padding: 0 10px;
-  position: relative;
-}
-.navbar-wagon-search-btn {
-  line-height: 40px;
-  color: #E6E6E6;
-  border: none;
-  background: transparent;
-  position: absolute;
-  right: 14px;
-  top: -2px;
-  z-index: 1;
-}
-.navbar-wagon-search-input {
-  flex: 0 1 300px;
-  transition: all 0.15s ease;
-  line-height: 40px;
-  font-weight: lighter;
-  color: #666666;
-  border: 1px solid #E6E6E6;
-  border-radius: 5px;
-  padding: 0 10px;
-  font-size: 14px;
-  outline: none;
-}
-.navbar-wagon-search-input:focus  {
-  border: 1px solid #CCCCCC;
-}
+// .navbar-wagon-search {
+//   flex: 0 1 300px;
+//   display: flex;
+//   justify-content: flex-end;
+//   padding: 0 10px;
+//   position: relative;
+// }
+// .navbar-wagon-search-btn {
+//   line-height: 40px;
+//   color: #E6E6E6;
+//   border: none;
+//   background: transparent;
+//   position: absolute;
+//   right: 14px;
+//   top: -2px;
+//   z-index: 1;
+// }
+// .navbar-wagon-search-input {
+//   flex: 0 1 300px;
+//   transition: all 0.15s ease;
+//   line-height: 40px;
+//   font-weight: lighter;
+//   color: #666666;
+//   border: 1px solid #E6E6E6;
+//   border-radius: 5px;
+//   padding: 0 10px;
+//   font-size: 14px;
+//   outline: none;
+// }
+// .navbar-wagon-search-input:focus  {
+//   border: 1px solid #CCCCCC;
+// }
 
 /* Navbar dropdown menu */
 .navbar-wagon-dropdown-menu {
