--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -200,8 +200,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  p {
-    margin: 0;
+  a {
+    color: black;
+    text-align: center;
+    &:hover{
+      text-decoration: none;
+    }
   }
 }
 
