--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <% @items.sort { |i, j| i.category_id <=> j.category_id }.each_with_index do |item, i| %>
     <div class="col-xs-12 col-sm-6 col-md-4">
-      <%= link_to package_item_path(item: item.id), method: :post, remote: true do %>
+      <%= link_to package_item_path(item: item.id, items: @items.map { |i| i.id }), method: :post, remote: true do %>
         <div class="card">
           <div class="card-content-container">
             <div class="card-title">
