minor style tweeks

--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -1,11 +1,11 @@
 <div id="package-main-index">
-           <div class="card-row">
-            <%= render 'pages/package_page', categories: @categories, items: @items %>
-          </div>
-        </div>
+  <div class="card-row">
+    <%= render 'pages/package_page', categories: @categories, items: @items %>
+  </div>
+</div>
 
-
-
+</div>
+<div class="col-xs-12 col-md-5">
 <div class="sidebar">
   <div class="package-items">
     <% if current_user %>
