--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -90,6 +90,7 @@
 .card-row{
   padding: 90px;
   padding-top: 20px;
+  padding-bottom: 0;
   // background-color: rgb(245, 245, 245);
   // box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   // height: 85vh;
