--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,16 +1,16 @@
 <div class="navbar-wagon <%= controller_name == "pages" && action_name == "home" ? "nav-bg-transparent nav-btn-white" : "nav-bg-white nav-btn-grey " %>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-<!-- <div class="logo"> -->
-<div class="nav-logo-font">
-  <h1>Zebrasclub</h1>
-</div>
+  <!-- <div class="logo"> -->
+  <div class="nav-logo">
+    <h1>Zebrasclub</h1>
+  </div>
 
   <%#= image_tag "logo_complet_2.png" %>
   <%#= image_tag "logo_zebrasclub_2.svg" %>
 
   <%#= image_tag "https://unsplash.it/50" %>
-<!-- </div> -->
+  <!-- </div> -->
   <% end %>
 
   <!-- Right Navigation -->
@@ -18,52 +18,52 @@
 
 
     <% unless (current_user && current_user.orders.first.order_items.where(package: true).length.zero?) || (!current_user && session[:package_items].nil?) %>
-      <%= link_to package_path, class: "btn navbar-button" do %>
-      <i class="fa fa-cube"></i> My Package
-      <% end %>
+    <%= link_to package_path, class: "btn navbar-button" do %>
+    <i class="fa fa-cube"></i> My Package
     <% end %>
-      <%= link_to orderitems_path, class: "btn navbar-button" do %>
-        <i class="fa fa-shopping-cart"></i> My Cart
-      <% end %>
+    <% end %>
+    <%= link_to orderitems_path, class: "btn navbar-button" do %>
+    <i class="fa fa-shopping-cart"></i> My Cart
+    <% end %>
 
     <% if user_signed_in? %>
-      <div>
-       <%= link_to destroy_user_session_path, method: :delete, class: "btn navbar-button" do %>
-           <i class="fa fa-sign-out"></i> Sign Out
+    <div>
+     <%= link_to destroy_user_session_path, method: :delete, class: "btn navbar-button" do %>
+     <i class="fa fa-sign-out"></i> Sign Out
+     <% end %>
+   </div>
+   <% else %>
+   <%= link_to "Login", new_user_session_path, class: "btn navbar-button navbar-wagon-item" %>
+   <%= link_to "Sign Up", new_user_registration_path, class: "btn navbar-button navbar-wagon-item" %>
+   <% end %>
+ </div>
+ <div class="navbar-wagon-item hidden-md hidden-lg">
+  <div class="dropdown">
+    <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+    <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+      <li><a href="/package"><i class="fa fa-cube"></i>My Package</a></li>
+      <li><a href="/orderitems"><i class="fa fa-shopping-cart"></i>My Cart</a></li>
+      <% if current_user %>
+      <li>
+        <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-logout" do %>
+        <i class="fa fa-sign-out"></i>Sign Out
         <% end %>
-      </div>
-    <% else %>
-      <%= link_to "Login", new_user_session_path, class: "btn navbar-button navbar-wagon-item" %>
-      <%= link_to "Sign Up", new_user_registration_path, class: "btn navbar-button navbar-wagon-item" %>
-    <% end %>
-  </div>
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="/package"><i class="fa fa-cube"></i>My Package</a></li>
-        <li><a href="/orderitems"><i class="fa fa-shopping-cart"></i>My Cart</a></li>
-        <% if current_user %>
-          <li>
-            <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-logout" do %>
-              <i class="fa fa-sign-out"></i>Sign Out
-            <% end %>
-          </li>
-        <% else %>
-          <li>
-            <%= link_to new_user_session_path, class: "dropdown-logout" do %>
-              <i class="fa fa-sign-in"></i>Sign In
-            <% end %>
-          </li>
-          <li>
-            <%= link_to new_user_registration_path, class: "dropdown-logout" do %>
-              <i class="fa fa-user-plus"></i>Sign Up
-            <% end %>
-          </li>
+      </li>
+      <% else %>
+      <li>
+        <%= link_to new_user_session_path, class: "dropdown-logout" do %>
+        <i class="fa fa-sign-in"></i>Sign In
         <% end %>
-      </ul>
-    </div>
+      </li>
+      <li>
+        <%= link_to new_user_registration_path, class: "dropdown-logout" do %>
+        <i class="fa fa-user-plus"></i>Sign Up
+        <% end %>
+      </li>
+      <% end %>
+    </ul>
   </div>
+</div>
 </div>
 <!-- Dropdown list appearing on mobile only -->
 
