--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,7 +4,7 @@
   text-decoration: none;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
   font-family: $base-font;
-  margin: 10px 0px;
+  margin: 15px 0px;
   padding: 20px;
   position: relative;
   &:hover{
@@ -88,8 +88,7 @@
   opacity: 0;
 }
 .card-row{
-  padding: 90px;
-  padding-top: 20px;
+  padding: 0 50px;
   // background-color: rgb(245, 245, 245);
   // box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   // height: 85vh;
