--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-radius: 2px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 .package-item-photo {
