--- a/app/assets/stylesheets/layout/_main_package_page.scss
+++ b/app/assets/stylesheets/layout/_main_package_page.scss
@@ -6,6 +6,14 @@
   margin-top: 70px;
 }
 
+
+@media (max-width: 992px) {
+  #package-main-index {
+    padding-right: 0;
+  }
+}
+
+
 // .main-container {
 //   display: flex;
 //   align-items: center;
