--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -24,10 +24,11 @@
   right: 0px;
   bottom: 0px;
   margin-top: 15px;
-  color: grey;
-  font-weight: bold;
   border-radius: 2px;
   padding: 15px 20px;
+  font-size: 20px;
+  color: #333333;
+  background-color: #f7f7f7;
   p {
     margin: 0;
   }
@@ -36,7 +37,7 @@
 .in-cart {
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   background-color: $cart-button;
-  color: black;
+  color: #bef5ea;
 }
 
 .card-picture {
