--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -30,6 +30,7 @@
   justify-content: space-around;
   align-items: center;
   padding: 20px 20px;
+  border-bottom: solid 1px rgba(151,151,151,0.1);
 }
 
 .package-item-picture {
